# vefem

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: fem.rs  lib.rs  material.rs  profile.rs
src/api/: api_fem.rs  api_loads.rs  fem.rs  mod.rs
src/fem/: axial_deformation.rs  calculation_model.rs  deflection.rs  equivalent_loads.rs  fem_handler.rs  internal_forces.rs  matrices.rs  mod.rs  node_results.rs  stiffness.rs  utils.rs
src/loads/: lc_utils.rs  load.rs  load_combination.rs  load_group.rs  mod.rs  utils.rs
src/material/: concrete.rs  steel.rs  timber.rs
src/models/: mod.rs
src/printing/: mod.rs
src/profile/: area.rs  profile_custom.rs  profile_polygon.rs  profile_standard.rs  second_moment_of_area.rs  smoa.rs  utils.rs
src/reinforcement/: calculation_rebar.rs  element_reinforcement.rs  mod.rs  rebar_collection.rs  rebar_data.rs  rebar_distribution.rs  rebar_row.rs  reinforcement.rs  reinforcement_data.rs  shear_rebar.rs  single_rebar.rs  tendon_data.rs  utils.rs
src/results/: calc_results.rs  internal_force_results.rs  mod.rs  node_results.rs
src/settings/: calc_settings.rs  mod.rs
src/structure/: calculation_model.rs  element.rs  mod.rs  node.rs  profile.rs  release.rs  structure_model.rs  support.rs  utils.rs
tests/: axial_deformation_tests.rs  deflection_test.rs  equivalent_load_test.rs  fem_test.rs  internal_forces_test.rs  load_combination_tests.rs  printing_tests.rs  reinforcement_tests.rs  serializing_tests.rs
theory/: FEM matriisit.xlsx  TestFrame.afdesign  TheoryDrawings.afdesign  TheoryDrawings.afdesign~lock~
(+1 files in other folders)
