[package]
name = "vefem"
version = "0.1.0"
edition = "2021"

[lib]
name="vefem"

[dependencies]
vputilslib = { git = "https://github.com/VillePe/rust-vputilslib", branch = "dev" }
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5.1"